# whispa-ai

./: .env.example  .gitignore  README.md  prometheus.yml  pyproject.toml  requirements.txt  test.py
app/: __init__.py  config.py  dependencies.py  main.py
app/middleware/: auth.py  prometheus.py
app/models/: schemas.py  user.py
app/routers/: attachments.py  audio.py  auth.py  enquiry.py  linear.py  notes.py  ocr.py  upload.py  user.py  waitlist.py
app/services/: audio_service.py  clean_up_queue.py  enquiry_services.py  github_service.py  jira_service.py  linear_service.py  llm_client.py  notes_service.py  ocr_service.py  supabase_client.py  usage_service.py  waitlist_service.py
app/utils/: audio_to_wav.py  base64_to_temp_url.py  extract_title_body.py  image_upload.py  privacy.py  transcribe_audio.py
tests/: conftest.py  test_audio.py  test_notes.py  test_ocr.py
