[tool.poetry]
name = "whispa-ai"
version = "0.1.0"
description = "An application that utilizes AI tools to analyze screen captures and voice input to generate notes."
authors = ["Joshua Ogunyele <info@whispa.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
pillow = "^9.0.0"
pytesseract = "^0.3.8"
speechrecognition = "^3.8.1"
google-generativeai==0.3.1


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"